--- a/reports/potting_report_actions.xml
+++ b/reports/potting_report_actions.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- Format de papier paysage A4 pour le rapport OT Daily -->
+    <!-- Format de papier paysage A4 pour le rapport OT Daily (style ETAT_OT Excel) -->
     <record id="paperformat_ot_daily_landscape" model="report.paperformat">
         <field name="name">OT Daily Report - A4 Paysage</field>
         <field name="default" eval="False"/>
         <field name="format">A4</field>
         <field name="orientation">Landscape</field>
-        <field name="margin_top">40</field>
-        <field name="margin_bottom">20</field>
-        <field name="margin_left">7</field>
-        <field name="margin_right">7</field>
+        <field name="margin_top">25</field>
+        <field name="margin_bottom">15</field>
+        <field name="margin_left">5</field>
+        <field name="margin_right">5</field>
         <field name="header_line" eval="False"/>
-        <field name="header_spacing">35</field>
-        <field name="dpi">90</field>
+        <field name="header_spacing">20</field>
+        <field name="dpi">96</field>
     </record>
 
     <!-- Transit Order Report Action -->
